--- a/BlenMovies/package.json
+++ b/BlenMovies/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -27,7 +28,9 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
+    "prettier": "3.4.2",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-no-scrollbar": "^1.0.1",
     "vite": "^6.0.5"
   }
 }
